<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/onboarding_background"
        android:scaleType="centerCrop"
        android:src="@drawable/movie_imgs" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/onboarding_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="6dp"
            android:text="@string/onboarding_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="3dp"
            android:text="blah blah blah blah blah blah blah blah blah blah blah \nblah blah blah blah blah blah blah blah blah "
            android:textAlignment="center"
            android:textColor="#BFFFFFFF"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetStarted"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_margin="16dp"
            android:background="@drawable/red_button_background"
            android:backgroundTint="@null"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>